集成flyway框架，添加h2内存数据库，新增用户表添加默认用户信息，完成用户登录逻辑。

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,7 @@ jdbc.pool.maxActive=2
 # mybatis config
 mybatis.mapperLocations=classpath*:mybatis/*.xml
 pagehelper.pageSizeZero=true
+
+# flyway
+flyway.baselineOnMigrate=true
+spring.flyway.locations=classpath:db
