--- a/pom.xml
+++ b/pom.xml
@@ -57,11 +57,29 @@
         </dependency>
         
         <!-- 使用内存数据库，生产环境请更换数据库驱动 -->
+        
+        <!-- <dependency>
+		    <groupId>org.apache.derby</groupId>
+		    <artifactId>derby</artifactId>
+		    <scope>runtime</scope>
+		</dependency> -->
+		        
         <dependency>
+		    <groupId>com.h2database</groupId>
+		    <artifactId>h2</artifactId>
+		    <scope>runtime</scope>
+		</dependency>
+		        
+        <!-- <dependency>
 		    <groupId>org.hsqldb</groupId>
 		    <artifactId>hsqldb</artifactId>
 		    <scope>runtime</scope>
-		</dependency>
+		</dependency> -->
+		
+		<dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+        </dependency>
         
         <!-- log4j -->
         <dependency>
